[tool.poetry]
name = "tiktoken-calc"
version = "0.1.0"
description = "Calculate tokens and costs with tiktoken"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tiktoken_calc"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
